cas-home/site-specific.css
/*site specific css for CAS home */

/*Fix IE hover card image stretch*/
@supports (object-fit: cover) {
   .all-cas-events  .localist-hover-card__img {
        height: auto;
    }
}
.all-cas-events .localist-hover-card__img {
        height: initial;
}

/*TYPOGRAPHY*/
h3 {
    color: #333;
}

.full-width h2 {
    color:#1E6B52;
}

hr {
    border-top: 2px solid #80bc00;
    width: 43px;
    margin: 0 auto 1em;
}
ul li ul {
    margin-left: 1em;
}
.icon-publish {
    color: #1E6B52;
    font-size: 28px;
    margin-bottom: 0.5em;
}
.icon-cancel-2 {
    color: #ff0000;
    font-size: 28px;
    margin-bottom: 0.5em;
}
@media all and (max-width: 1024px) {
    ul li {
        margin-left: 0.25em;
    }
}
p,span {
    hyphens: none;
    -webkit-hyphens: none;
}



/*SIDEBAR*/
/*.template-01 #rightsidebar .nav.menu>.parent>.nav-child>li>.nav-header {
		font-weight: bold !important;
		color: #fff;
		background-color: #1E6B52;
		text-shadow: none;
		padding: 0.5em 0.5em 0.45em;
	}*/
.template-01 #rightsidebar .nav.menu li.divider span {
    font-weight: bold !important;
    color: #1E6B52;
    text-transform: uppercase;
    letter-spacing: 1px;
}

.template-01 #rightsidebar .nav.menu li.divider {
    margin-top: 25px !important;
    border-bottom: 1px solid #1E6B52;
}
@media all and (max-width: 1024px) {
    .template-01 #rightsidebar .nav.menu li.divider {
        border-width: 0px !important;
    }
}
/*Add some space above sidebars on mobile screens*/
@media all and (max-width: 899px) {
    body.hd.sidebars #downright {
        margin-top: 20px !important;
    }
}

/*MAKES PAGES FULL-WIDTH*/
body.hd.full-width #whitebox {
    max-width: 100%;
    padding: 0px;
}

body.hd.full-width #maincolumn-wide {
    max-width: 100%;
}

body.hd.full-width #content {
    width: 100%;
    padding-top: 0px;
    margin-bottom: 0px;
}

@media (max-width: 1024px) {
    body.full-width.hd #maincolumn-wide {
        padding-top: 0%;
    }
}

/*BACKGROUND COLORS*/
.dark-green-bg {
    background-color: #1E6B52;
}

.dark-green-bg p,
.dark-green-bg h2,
.dark-green-bg a {
    color: #fff !important;
}

.dark-green-bg a.btn--white-to-dark-green {
    color: #1E6B52 !important;
}

.light-green-bg {
    background-color: #F4F8EE;
}


/*WHITE TO DARK GREEN BUTTON - for dark green backgrounds*/
.template-01.linear.hd #wrapper .btn--white-to-dark-green {
    border: 1px solid rgba(30, 107, 82, 0.5);
    background-color: #fff;
    font-weight: 500 !important;
    display: inline-block;
    border-radius: 2px;
    text-decoration: none;
    transition: all 0.3s;
    position: relative;
    z-index: 1;
}

.template-01.linear.hd #wrapper .btn--white-to-dark-green:hover {
  color: #fff !important;
  -webkit-transition: all 0.3s;
  /* Safari */
  transition: all 0.3s;
  background-color: #17513e;
  text-decoration: none;
  border: 1px solid rgba(30, 107, 82, 0.5); 
}


/*EPILOGUE*/
body.ribbonFullwidth #epilogue {
    padding-top: 0px;
    max-width: 100% !important;
    clear: both !important;
}

/*FOOTER MENU*/
#footer .footer-menu a {
    font-size: 16px !important;
}

.footer-menu {
    background-color: #EEEEEE;
    padding: 10px !important;
    text-align: center;
}

.footer-menu ul.nav {
    margin: 0px auto;
    width: 100%;
    padding-bottom: 10px;
}

#footer .footer-menu ul.nav li {
    display: inline-block !important;
    padding: 0px 20px;
    border-left: 1px solid #fff;
}

#footer .footer-menu ul.nav li:first-child {
    border-left: 0px;
}

#footer .footer-menu a:link,
#footer .footer-menu a:visited {
    color: #444;
    font-weight: bold;
}

#footer .footer-menu a:hover,
#footer .footer-menu a:focus {
    color: #1E6B52 !important;
}

/*UNIT FOOTER*/
#footer a img {
    vertical-align: inherit;
}

/*LANDING PAGES*/
.subpage-intro {
    background-color: #f4f8ee;
    padding: 1em 0 1.75em 0;
    margin: 0 auto;
    text-align: center;
    border-bottom: 1px solid #80bc00;
    box-sizing: border-box;
}

.subpage-intro-inner {
    max-width: 1280px;
    margin: 0 auto;
    padding: 0 1em;
}

.subpage-intro-heading {
    text-align: center;
    color: #1E6B52;
}

.subpage-inner {
    max-width: 1080px;
    margin: 0 auto;
    padding: 1em 1em 2em 1em;
    box-sizing: border-box;
}

.subpage-inner-heading {
    text-align: center;
    color: #1E6B52;
    margin-bottom: 1em;
}
.subpage-intro-buttons {
    display: flex; 
    flex-wrap: wrap; 
    justify-content: center;
}
.subpage-intro-buttons a {
    margin: 10px;
}
@media all and (max-width: 768px) {
    .subpage-intro-buttons {
        display: block;
        width: 70%;
        margin: 0 auto;
    }
    .subpage-intro-buttons a {
        width: 100%;
        margin: 10px 0;
    }
}
.two-column {
    display: flex;
    flex-wrap: wrap;
}

.two-column .inner-column {
    flex: 1 1 300px;
}
.two-column .subpage-inner {
    flex: 1 1 300px;
    align-self: center;
    -ms-grid-column-align: center;
}
.two-column .photo-column {
    flex: 1 1 300px;
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
}
/*.two-column-two-thirds {
		display: flex;
		flex-wrap: wrap;
		align-items: center;
	}

	.two-column-two-thirds .photo-column {
		flex: 1 1 300px;
	}

	.two-column-two-thirds .subpage-inner {
		flex: 2 1 300px;
		padding-left: 2em;
		padding-right: 2em;
	}*/

@media all and (min-width: 1080px) {
    .subpage-intro-inner {
        width: 55%;
    }
}

/*NEWS/EVENTS - TWO-COLUMN WITH MIDDLE BORDER*/
.two-column-middle-border {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
}

.two-column-middle-border-col {
    flex: 1 1 400px;
    box-sizing: border-box;
    padding: 20px 30px;
}

@media all and (min-width: 832px) {
    .two-column-middle-border-col:first-child {
        border-right: 2px solid #80bc00;
    }
}
@media all and (max-width: 831px) {
    .two-column-middle-border-col:first-child {
        border-bottom: 2px solid #80bc00;
    }
}
/* ... */

